@@ -1,3 +1,7 @@
+- allow to choose countries like "Angola" which have no locale (en_AO) in the
+  "best" countries (alas it won't be remembered, will only be used in kde
+  settings for now)
+
 Version 10.4.215 - 26 September 2007, by Thierry Vignaud
 
 - display nicer HTML release notes rather than raw text version
