@@ -1,3 +1,7 @@
+- localedrake: 
+  o allow to choose countries like "Angola" which have no locale (en_AO) in
+    the "best" countries (alas it won't be remembered, will only be used in
+    kde settings for now)
 - finish-install:
   o display nicer HTML release notes rather than raw text version
 
